# VisionMCP

./: .gitignore  AGENTS.md  README.md  config.yaml  config.yaml.example  pyproject.toml
docs/superpowers/plans/: 2026-05-07-image-mcp-plan.md  2026-05-07-opencode-image-support.md  2026-05-08-enhance-error-handling.md  2026-05-08-image-comparison-implementation.md  2026-05-08-image-url-logging.md
docs/superpowers/specs/: 2026-05-07-image-mcp-design.md  2026-05-07-opencode-image-support-design.md  2026-05-08-enhance-error-handling-design.md  2026-05-08-image-comparison-design.md  2026-05-08-image-url-logging-design.md
src/: config.py  image_extractor.py  image_helper.py  logger.py  main.py  vision_client.py
tests/: test_compare_images.py  test_config.py  test_image_extractor.py  test_image_helper.py  test_logger.py  test_main.py  test_vision_client.py
tests/fixtures/: history-sample.jsonl
