[project]
name = "image-mcp"
version = "0.1.0"
description = "A local MCP server for image understanding via vision models"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
image-mcp = "src.main:main"
